minor style fix - button container gap

--- a/react-app/src/pages/AdminRegistrationManagementPage/SubComponents/SubComponent.module.css
+++ b/react-app/src/pages/AdminRegistrationManagementPage/SubComponents/SubComponent.module.css
@@ -22,6 +22,7 @@
 .buttonCodeContainer {
   display: flex;
   justify-content: flex-end;
+  gap: 2%;
   margin-top: 1.5rem;
 }
 
